# stogs

./: CMakeLists.txt  CleanUpFactory.py  Doxyfile  README.md  SToGS_DetectorBuilder.cc  SToGS_Source.cc  default.dfb
DetectorFactory/: BrowserFactory.C
DetectorFactory/Arrays/Builders/: AGATA_180.dfb  Chateau2Crystal.dfb  EUROBALL_III.dfb  EXOGAM.dfb  FATIMA.dfb
DetectorFactory/Generics/Demos/: My_OpticalPW.geo  TwoShells.geo
DetectorFactory/Imports/: A_DIAMANT.amap  A_DIAMANT.gdml  A_DIAMANT_Back.amap  A_DIAMANT_Back.dmap  A_DIAMANT_Back.gdml  A_DIAMANT_Back_bare.amap  A_DIAMANT_Back_bare.gdml  A_DIAMANT_FForw.amap  A_DIAMANT_FForw.dmap  A_DIAMANT_FForw.gdml  A_DIAMANT_FForw_bare.amap  A_DIAMANT_FForw_bare.gdml  A_DIAMANT_Forw.amap  A_DIAMANT_Forw.gdml  A_DIAMANT_Forw_bare.amap  A_DIAMANT_Forw_bare.dmap  A_DIAMANT_Forw_bare.gdml  A_DIAMANT_Ring.amap  A_DIAMANT_Ring.dmap  A_DIAMANT_Ring.gdml  A_DIAMANT_Ring_bare.amap  A_DIAMANT_Ring_bare.gdml  A_DIAMANT_Wall.amap  A_DIAMANT_Wall.gdml  A_DIAMANT_Wall_bare.amap  A_DIAMANT_Wall_bare.dmap  A_DIAMANT_Wall_bare.gdml  A_DIAMANT_bare.amap  A_DIAMANT_bare.dmap  A_DIAMANT_bare.gdml  A_NWALL.amap  A_NWALL.dmap  A_NWALL.gdml  A_NWALL_bare.amap  A_NWALL_bare.dmap  A_NWALL_bare.gdml  KoelnSi.amap  KoelnSi.dmap  KoelnSi.gdml  KoelnSiABSORBER.amap  (+6 more)
DetectorFactory/SemiConductors/Ge/Builders/: agata_capsule.geo  agata_cluster.geo  agata_euler.geo
G4Macros/: GPSPointLike.mac  GPS_Co60.mac  GPS_Cs137.mac  GPS_iso.mac  vis.mac  visGL.mac  visHepRep.mac
SToGS_MY/: PW_OpticalDetectorConstruction.cc  PW_OpticalDetectorConstruction.hh
SToGS_MY_Container/: ParisUserAction.cc  ParisUserAction.hh  README
SToGS_MY_Container/toROOTGPS/: toROOTGPSPrimaryGeneratorAction.cc  toROOTGPSPrimaryGeneratorAction.hh
analysis/AGATA/: Geometry_Utilities.C
analysis/ParisAnalysis/: Makefile  ParisEvents.C  ParisEvents.h  ParisEventsLinkDef.h
analysis/SToGS/: Makefile  SToGS_BaseROOTEvents.C  SToGS_BaseROOTEvents.h  SToGS_BaseROOTEventsLinkDef.h
cmake/modules/: FindROOT.cmake  RootNewMacros.cmake
csrc/: SToGSConfig.h.cmake  SToGS_AGATA.cc  SToGS_AGATA.hh  SToGS_ActionInitialization.cc  SToGS_ActionInitialization.hh  SToGS_ArraysDF.cc  SToGS_ArraysDF.hh  SToGS_Ascii.cc  SToGS_Ascii.hh  SToGS_BaseROOT.cc  SToGS_BaseROOT.hh  SToGS_BaseROOTActions.cc  SToGS_BaseROOTActions.hh  SToGS_BaseROOTEvent.cc  SToGS_BaseROOTEvent.hh  SToGS_BaseROOTEventsActions.cc  SToGS_BaseROOTEventsActions.hh  SToGS_BasicEventAction.cc  SToGS_BasicEventAction.hh  SToGS_BasicPrimaryGeneratorAction.cc  SToGS_BasicPrimaryGeneratorAction.hh  SToGS_BasicRunAction.cc  SToGS_BasicRunAction.hh  SToGS_BasicSteppingAction.cc  SToGS_BasicSteppingAction.hh  SToGS_BasicTrackingAction.cc  SToGS_BasicTrackingAction.hh  SToGS_DetectorFactory.cc  SToGS_DetectorFactory.hh  SToGS_EUROBALL.icc  SToGS_G4_CaloHit.cc  SToGS_G4_CaloHit.hh  SToGS_G4_CaloSD.cc  SToGS_G4_CaloSD.hh  SToGS_G4_CopClusterHit.cc  SToGS_G4_CopClusterHit.hh  SToGS_G4_CopClusterSD.cc  SToGS_G4_CopClusterSD.hh  SToGS_G4_GPSPrimaryGeneratorAction.cc  SToGS_G4_GPSPrimaryGeneratorAction.hh  (+65 more)
setup/: SToGS_tree_actions.conf  Utilities.C  paris_actions.conf
setup/SToGSDefault/: SToGS_Source.conf  SToGS_ascii_actions.conf  SToGS_tree_actions.conf  toROOTGPS.gene  toROOTGPS_Thread00.gene  toROOTGPS_Thread01.gene
testdirectory/: testfile
